# rules_bun

./: .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  VERSION  WORKSPACE  flake.nix  implementation_plan.md  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/workflows/: BUILD.bazel  ci.yml  pages.yml
bun/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  version.bzl
docs/: BUILD.bazel  bun_install.md  index.md  rules.md
examples/basic/: BUILD.bazel  README.md  main.ts
examples/vite_monorepo/: BUILD.bazel  MODULE.bazel  README.md  run_vite_monorepo_apps.sh
examples/vite_monorepo/apps/app-b/: main.js  package.json
internal/: BUILD.bazel  bun_binary.bzl  bun_build_support.bzl  bun_bundle.bzl  bun_command.bzl  bun_compile.bzl  bun_dev.bzl  bun_install.bzl  bun_script.bzl  bun_test.bzl  js_library.bzl  js_run_devserver.bzl  runtime_launcher.bzl  runtime_launcher.js  workspace.bzl
tests/: nested_bazel_test.sh
tests/binary_test/: BUILD.bazel  path_probe.ts  run_binary.sh  run_env_binary.sh  run_flag_binary.sh  run_parent_env_binary.sh  run_path_binary.sh  verify_configured_launcher_shape.sh  verify_data_shape.sh  verify_runtime_flags_shape.sh
tests/bun_test_test/: BUILD.bazel  cache_hit_shape.sh  cache_miss_shape.sh  configured_suite_shape.sh  failing_suite_shape.sh  junit_shape.sh
tests/bundle_test/: BUILD.bazel  verify_collision_outputs.sh  verify_flag_aquery.sh  verify_hermetic_shape.sh  verify_sourcemap_shape.sh
tests/ci_test/: BUILD.bazel  (+3 more)
(+40 files in other folders)
