module(
    name = "rules_bun_example_vite_monorepo",
    version = "0.1.0",
)

bazel_dep(name = "rules_bun", version = "0.2.2")
bazel_dep(name = "rules_multirun", version = "0.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "rules_bun",
    path = "../..",
)

bun_ext = use_extension("@rules_bun//bun:extensions.bzl", "bun")
use_repo(
    bun_ext,
    "bun_darwin_aarch64",
    "bun_darwin_x64",
    "bun_linux_aarch64",
    "bun_linux_x64",
    "bun_windows_x64",
)

register_toolchains(
    "@rules_bun//bun:darwin_aarch64_toolchain",
    "@rules_bun//bun:darwin_x64_toolchain",
    "@rules_bun//bun:linux_aarch64_toolchain",
    "@rules_bun//bun:linux_x64_toolchain",
    "@rules_bun//bun:windows_x64_toolchain",
)

bun_install_ext = use_extension("@rules_bun//bun:extensions.bzl", "bun_install")
bun_install_ext.install(
    name = "npm",
    bun_lockfile = "//:bun.lock",
    package_json = "//:package.json",
)
use_repo(bun_install_ext, node_modules = "npm")
